force-app/main/default/objects/Candidate_Assessment__c/Candidate_Assessment__c.object-meta.xml
<CustomObject>
    <label>Candidate Assessment</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>