force-app/main/default/objects/Candidate_Assessment__c/fields/AI_Analysis_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis_Summary__c</fullName>
    <label>AI Analysis Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>