force-app/main/default/objects/Candidate_Assessment__c/fields/Calculated_Score__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Score__c</fullName>
    <label>Calculated Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>