force-app/main/default/objects/Candidate_Assessment__c/fields/Key_Skills_Identified__c.field-meta.xml
<CustomField>
    <fullName>Key_Skills_Identified__c</fullName>
    <label>Key Skills Identified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>