force-app/main/default/objects/Candidate_Assessment__c/fields/Raw_JSON_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_JSON_Response__c</fullName>
    <label>Raw JSON Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>